--- a/TypingSpeedTest/TypingSpeedTest.csproj
+++ b/TypingSpeedTest/TypingSpeedTest.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="words.txt" />
     <EmbeddedResource Include="History.resx">
       <DependentUpon>History.cs</DependentUpon>
     </EmbeddedResource>
